# tinyagent

./: AUTHORS  CMakeLists.txt  ChangeLog  README  clean.sh  install.sh  monitor_agent  start.sh  version.sh
conf/: agent.conf
src/conf/: monitor.conf
src/include/: agent.h  cJSON.h  collect_cpu.h  collect_disk.h  collect_hard.h  collect_mem.h  common.h  daemon.h  fork.h  json_base.h  json_common.h  json_cpu.h  json_disk.h  json_disk_all.h  json_disk_iostat.h  json_disk_raw.h  json_disk_single.h  json_interval_240.h  json_mysql.h  json_net.h  json_proc.h  parse_conf.h  parse_para.h  socket.h  thread.h
src/lib/: agent.c  cJSON.c  collect_cpu.c  collect_disk.c  collect_hard.c  collect_mem.c  common.c  daemon.c  fork.c  json_base.c  json_common.c  json_cpu.c  json_disk_iostat.c  json_interval_240.c  json_mysql.c  json_net.c  json_proc.c  parse_conf.c  parse_para.c  socket.c  thread.c
